--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,18 @@
-theme: jekyll-theme-leap-day
+title: Leaf Blog
+iconURL: assets/default-icon.png
+theme: jekyll-theme-leaf
 
-title: 网站
+# for a clean URL
+permalink: :slug
 
-description: 一个网站
+social:
+  twitter: _SupunKavinda
+  github: SupunKavinda
 
-markdown: GFM
+plugins:
+ - jekyll-feed
+ - jekyll-seo-tag
+
+### comments & analytics
+hyvor_talk_website_id: 14
+google_analytics: UA-NNNNNNNN-N
