--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,10 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  mcchampions
 
 # Build settings
-theme: jekyll-theme-hacker
+remote_theme: pages-themes/hacker@v0.2.0
 plugins:
-  - jekyll-feed
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+- jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
