--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install Dependencies
         run: npm install --unsafe-perm
       - name: Build
-        run: ls -l hexo && sudo chmod +777 hexo && npm run build --unsafe-perm
+        run: hexo clean && npm run build --unsafe-perm
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
