--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main # default branch
-      
+
 jobs:
   pages:
     runs-on: ubuntu-latest
@@ -12,10 +12,10 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js v20.1.0.x
+      - name: Use Node.js 16.x
         uses: actions/setup-node@v2
         with:
-          node-version: "v20.1.0"
+          node-version: "16"
       - name: Cache NPM dependencies
         uses: actions/cache@v2
         with:
@@ -24,12 +24,11 @@ jobs:
           restore-keys: |
             ${{ runner.OS }}-npm-cache
       - name: Install Dependencies
-        run: npm install --unsafe-perm
+        run: npm install
       - name: Build
-        run: hexo-site@0.0.0 build && hexo generate
+        run: npm run build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
-          cname: qscraft.top
