--- a/themes/matery/_config.yml
+++ b/themes/matery/_config.yml
@@ -306,10 +306,10 @@ mySkills:
       background: 'linear-gradient(to right, #FFEB3B 0%, #FFF176 100%)'
       percent: 60%
     CS起源2:
-      background: 'linear-gradient(to right, #FFEB3B 0%, #FFF176 100%)'
+      background: 'linear-gradient(to right, #FBC03F 0%, #FBC1FF 100%)'
       percent: 80%
     Minecraft:
-      background: 'linear-gradient(to right, #FFEB3B 0%, #FFF176 100%)'
+      background: 'linear-gradient(to right, #3CFF25 0%, #3CFFFF 100%)'
       percent: 95%
 
 # config gallery of my photos in about page.
